Removed about users link, updated about us page and changed flash notice to alert

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,9 @@
 <% content_for :title do %>Tech Interview Tips: About Us<% end %>
 <div class="row panel">
 <div class="small-12 large-12 columns">
-  <h1>Original Team</h1>
-  <p>This website was originally created as our <a href="http://www.devbootcamp.com">Dev Bootcamp</a> final project.</p>
+  <h1>About</h1>
+  <p>This website was originally created as our <a href="http://www.devbootcamp.com">Dev Bootcamp</a> final project. Our intention was to create a way that we, and other web developers, could prepare for technical interviews and share what we've learned with others. We hope you find it useful.</p>
+  <h3>Original Team</h3>
 </div>
 
   <div class="large-3 columns text-center add-bottom-padding">
@@ -43,7 +44,7 @@
 
       <a href="https://twitter.com/drewcp87" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
 
-      <a href="http://www.linkedin.com/profile/view?id=307715365&amp;trk=nav_responsive_tab_profile" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></dd>
+      <a href="http://www.linkedin.com/in/drewchongparker" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></dd>
 
     </div>
 
@@ -55,11 +56,15 @@
 
       <dd><a href="https://github.com/MasonONeal" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
 
-      <a href="https://twitter.com/MasONeal" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></dd>
+      <a href="https://twitter.com/MasONeal" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+
+      <a href="http://www.linkedin.com/in/masononeal" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></dd>
+      
 
   </div>
   <div class="small-12 large-12 columns">
-  <p>This is now an Open Source project. To learn more, please visit <a href="https://github.com/jackiejohnston/tech-interview-tips/">its GitHub repo</a>. We also provide limited access to information on this site via <a href="http://www.techinterview.tips/api/questions">our API</a> if you would like to use it on your own website. (Note: If you want to see the information nicely formatted, you can use a Chrome extension such as <a href="https://chrome.google.com/webstore/detail/jsonview/chklaanhfefbnpoihckbnefhakgolnmc">JSONView.</a>) There is also an <a href="/actions">Activity Feed</a> available.</p>
+  <h3>Open Source</h3>
+  <p>This is now an Open Source project. To learn more, please visit <a href="https://github.com/jackiejohnston/tech-interview-tips/">its GitHub repo</a>. We also provide limited access to the information on this site via <a href="http://www.techinterview.tips/api/questions">our API</a> if you would like to use it on your own website. (Note: If you want to see the information nicely formatted, you can use a Chrome extension such as <a href="https://chrome.google.com/webstore/detail/jsonview/chklaanhfefbnpoihckbnefhakgolnmc">JSONView.</a>) There is also an <a href="/actions">Activity Feed</a> available.</p>
   </div>
 
 </div>
