--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,13 +53,7 @@
               <li><a href="http://www.techinterview.tips/tags/logic">Logic</a></li>
             </ul>
           </li>
-          <li class="has-dropdown">
-            <a href="#">About</a>
-            <ul class="dropdown">
-              <li><%= link_to "Us", about_path %></li>
-              <li><%= link_to "Users", users_path %></li>
-            </ul>
-          </li>
+          <li><%= link_to "About", about_path %></li>
         </ul>
 
         <!-- Right Nav Section -->
