Some styling, added Q&A asked/answered to profile page

--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |name, msg| %>
-  <div data-alert class="alert-box <%= name.to_s %>">
+  <div data-alert class="alert-box text-center <%= name.to_s %>">
     <%= msg %>
     <a href="" class="close">×</a>
   </div>
