--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title do %><%= @question.title %><% end %>
 <% if current_user %>
-  <div data-alert class="alert-box secondary"><a href="#" data-reveal-id="answerModal">Click here</a> if you'd like to answer this question.
+  <div data-alert class="alert-box secondary text-center"><a href="#" data-reveal-id="answerModal">Click here</a> if you'd like to answer this question.
   </div>
 <% else %>
-  <div data-alert class="alert-box secondary">Please sign in with your <%= link_to "GitHub", "/auth/github" %> or <%= link_to "LinkedIn", "/auth/linkedin" %> profile if you'd like to answer this question.
+  <div data-alert class="alert-box secondary text-center">Please sign in with your <%= link_to "GitHub", "/auth/github" %> or <%= link_to "LinkedIn", "/auth/linkedin" %> profile if you'd like to answer this question.
   </div>
 <% end %>
 <div class="row">
